--- a/login & register/login & register.ipynb
+++ b/login & register/login & register.ipynb
@@ -145,9 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "@extends('auth.app')\n",
     "\n",
-    "@section('content')\n",
     "    <div class=\"container\">\n",
     "        <div class=\"row\">\n",
     "            <div class=\"col-md-4 col-md-offset-4\">\n",
@@ -291,9 +289,7 @@
     "                </div>\n",
     "            </div>\n",
     "        </div>\n",
-    "    </div>\n",
-    "\n",
-    "@endsection"
+    "    </div>\n"
    ]
   }
  ],
