--- a/login & register/login & register.ipynb
+++ b/login & register/login & register.ipynb
@@ -145,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "<iframe srcdoc=\"\n",
     "    <div class=\"container\">\n",
     "        <div class=\"row\">\n",
     "            <div class=\"col-md-4 col-md-offset-4\">\n",
@@ -201,9 +201,72 @@
     "                </div>\n",
     "            </div>\n",
     "        </div>\n",
-    "    </div>\n",
+    "    </div>\"></iframe>\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<iframe srcdoc=\"\n",
+    "    <div class=\"container\">\n",
+    "        <div class=\"row\">\n",
+    "            <div class=\"col-md-4 col-md-offset-4\">\n",
+    "                <div class=\"login-panel panel panel-default\">\n",
+    "                    <div class=\"panel-heading\">\n",
+    "                        <h3 class=\"panel-title\">Please Sign In</h3>\n",
+    "                    </div>\n",
+    "                    <div class=\"panel-body\">\n",
+    "                        <form method=\"POST\" action=\"{{ route('login') }}\">\n",
+    "                            @csrf\n",
+    "                            <fieldset>\n",
+    "                                <div class=\"form-group\">\n",
+    "                                    <input id=\"email\" type=\"email\"\n",
+    "                                           placeholder=\"masukan email\"\n",
+    "                                           class=\"form-control @error('email') is-invalid @enderror\" name=\"email\"\n",
+    "                                           value=\"{{Session::get('email')}}\" required autocomplete=\"email\" autofocus>\n",
     "\n",
-    "@endsection\n"
+    "                                    @error('email')\n",
+    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
+    "                                            <strong class=\"text-danger\">{{ $message }}</strong>\n",
+    "                                        </span>\n",
+    "                                    @enderror\n",
+    "                                </div>\n",
+    "                                <div class=\"form-group\">\n",
+    "                                    <input id=\"password\" type=\"password\"\n",
+    "                                           placeholder=\"masukan password\"\n",
+    "                                           class=\"form-control @error('password') is-invalid @enderror\" name=\"password\"\n",
+    "                                           required autocomplete=\"current-password\">\n",
+    "\n",
+    "                                    @error('password')\n",
+    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
+    "                                            <strong class=\"text-danger\">{{ $message }}</strong>\n",
+    "                                        </span>\n",
+    "                                    @enderror\n",
+    "                                </div>\n",
+    "                                <div class=\"text-center\" style=\"margin-top: 15px\">\n",
+    "                                    Belum punya akun? <a href=\"/register\">Silahkan Register</a>\n",
+    "                                </div>\n",
+    "\n",
+    "\n",
+    "                                <button type=\"submit\" class=\"btn btn-lg btn-success btn-block\">\n",
+    "                                    {{ __('Login') }}\n",
+    "                                </button>\n",
+    "\n",
+    "                                @if (Route::has('password.request'))\n",
+    "                                    <a class=\"btn btn-link\" href=\"{{ route('password.request') }}\">\n",
+    "                                        {{ __('Forgot Your Password?') }}\n",
+    "                                    </a>\n",
+    "                                @endif\n",
+    "                            </fieldset>\n",
+    "                        </form>\n",
+    "                    </div>\n",
+    "                </div>\n",
+    "            </div>\n",
+    "        </div>\n",
+    "    </div>\"></iframe>"
    ]
   },
   {
