--- a/login & register/login & register.ipynb
+++ b/login & register/login & register.ipynb
@@ -136,16 +136,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "blade"
-    }
-   },
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "<iframe srcdoc=\"\n",
+    "\n",
     "    <div class=\"container\">\n",
     "        <div class=\"row\">\n",
     "            <div class=\"col-md-4 col-md-offset-4\">\n",
@@ -201,158 +196,7 @@
     "                </div>\n",
     "            </div>\n",
     "        </div>\n",
-    "    </div>\"></iframe>\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<iframe srcdoc=\"\n",
-    "    <div class=\"container\">\n",
-    "        <div class=\"row\">\n",
-    "            <div class=\"col-md-4 col-md-offset-4\">\n",
-    "                <div class=\"login-panel panel panel-default\">\n",
-    "                    <div class=\"panel-heading\">\n",
-    "                        <h3 class=\"panel-title\">Please Sign In</h3>\n",
-    "                    </div>\n",
-    "                    <div class=\"panel-body\">\n",
-    "                        <form method=\"POST\" action=\"{{ route('login') }}\">\n",
-    "                            @csrf\n",
-    "                            <fieldset>\n",
-    "                                <div class=\"form-group\">\n",
-    "                                    <input id=\"email\" type=\"email\"\n",
-    "                                           placeholder=\"masukan email\"\n",
-    "                                           class=\"form-control @error('email') is-invalid @enderror\" name=\"email\"\n",
-    "                                           value=\"{{Session::get('email')}}\" required autocomplete=\"email\" autofocus>\n",
-    "\n",
-    "                                    @error('email')\n",
-    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
-    "                                            <strong class=\"text-danger\">{{ $message }}</strong>\n",
-    "                                        </span>\n",
-    "                                    @enderror\n",
-    "                                </div>\n",
-    "                                <div class=\"form-group\">\n",
-    "                                    <input id=\"password\" type=\"password\"\n",
-    "                                           placeholder=\"masukan password\"\n",
-    "                                           class=\"form-control @error('password') is-invalid @enderror\" name=\"password\"\n",
-    "                                           required autocomplete=\"current-password\">\n",
-    "\n",
-    "                                    @error('password')\n",
-    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
-    "                                            <strong class=\"text-danger\">{{ $message }}</strong>\n",
-    "                                        </span>\n",
-    "                                    @enderror\n",
-    "                                </div>\n",
-    "                                <div class=\"text-center\" style=\"margin-top: 15px\">\n",
-    "                                    Belum punya akun? <a href=\"/register\">Silahkan Register</a>\n",
-    "                                </div>\n",
-    "\n",
-    "\n",
-    "                                <button type=\"submit\" class=\"btn btn-lg btn-success btn-block\">\n",
-    "                                    {{ __('Login') }}\n",
-    "                                </button>\n",
-    "\n",
-    "                                @if (Route::has('password.request'))\n",
-    "                                    <a class=\"btn btn-link\" href=\"{{ route('password.request') }}\">\n",
-    "                                        {{ __('Forgot Your Password?') }}\n",
-    "                                    </a>\n",
-    "                                @endif\n",
-    "                            </fieldset>\n",
-    "                        </form>\n",
-    "                    </div>\n",
-    "                </div>\n",
-    "            </div>\n",
-    "        </div>\n",
-    "    </div>\"></iframe>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Code untuk view register"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "blade"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "@extends('auth.app')\n",
-    "\n",
-    "@section('content')\n",
-    "    <div class=\"container\">\n",
-    "        <div class=\"row\">\n",
-    "            <div class=\"col-md-4 col-md-offset-4\">\n",
-    "                <div class=\"login-panel panel panel-default\">\n",
-    "                    <div class=\"panel-heading\">\n",
-    "                        <h3 class=\"panel-title\">Register</h3>\n",
-    "                    </div>\n",
-    "                    <div class=\"panel-body\">\n",
-    "                        <form method=\"POST\" action=\"{{ route('register') }}\">\n",
-    "                            @csrf\n",
-    "                            <fieldset>\n",
-    "                                <div class=\"form-group\">\n",
-    "                                    <input id=\"name\" type=\"text\" placeholder=\"masukan nama\"\n",
-    "                                           class=\"form-control @error('name') is-invalid @enderror\" name=\"name\"\n",
-    "                                           value=\"{{ old('name') }}\" required autocomplete=\"name\" autofocus>\n",
-    "\n",
-    "                                    @error('name')\n",
-    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
-    "                                            <strong class=\"text-danger\">{{ $message }}</strong>\n",
-    "                                        </span>\n",
-    "                                    @enderror\n",
-    "                                </div>\n",
-    "                                <div class=\"form-group\">\n",
-    "                                    <input id=\"email\" type=\"email\" placeholder=\"masukan email\"\n",
-    "                                           class=\"form-control @error('email') is-invalid @enderror\" name=\"email\"\n",
-    "\n",
-    "                                           value=\"{{ old('email') }}\" required autocomplete=\"email\">\n",
-    "\n",
-    "                                    @error('email')\n",
-    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
-    "                                            <strong class=\"text-danger\">{{ $message }}</strong>\n",
-    "                                        </span>\n",
-    "                                    @enderror\n",
-    "                                </div>\n",
-    "                                <div class=\"form-group\">\n",
-    "                                    <input id=\"password\" type=\"password\" placeholder=\"masukan password\"\n",
-    "                                           class=\"form-control @error('password') is-invalid @enderror\" name=\"password\"\n",
-    "                                           required autocomplete=\"new-password\">\n",
-    "\n",
-    "                                    @error('password')\n",
-    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
-    "                                            <strong>{{ $message }}</strong>\n",
-    "                                        </span>\n",
-    "                                    @enderror\n",
-    "                                </div>\n",
-    "                                <div class=\"form-group\">\n",
-    "                                    <input id=\"password-confirm\" type=\"password\" placeholder=\"konfirmasi pasowrd\"\n",
-    "                                           class=\"form-control\"\n",
-    "                                           name=\"password_confirmation\" required autocomplete=\"new-password\">\n",
-    "                                </div>\n",
-    "\n",
-    "                                <!-- Change this to a button or input when using this as a form -->\n",
-    "                                <button type=\"submit\" class=\"btn btn-lg btn-success btn-block\">\n",
-    "                                    Register\n",
-    "                                </button>\n",
-    "\n",
-    "                            </fieldset>\n",
-    "                        </form>\n",
-    "                    </div>\n",
-    "                </div>\n",
-    "            </div>\n",
-    "        </div>\n",
-    "    </div>\n"
+    "    </div>"
    ]
   }
  ],
