login register & logout

--- a/login & register/login & register.ipynb
+++ b/login & register/login & register.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Membuat Route Login dan Register"
+    "**Membuat Route Login dan Register**"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Membuat Controller UserController "
+    "**Membuat Controller UserController** "
    ]
   },
   {
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "code untuk user controllernya "
+    "**code untuk user controllernya**"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Code untuk view login"
+    "**Code untuk view login**"
    ]
   },
   {
@@ -190,6 +190,84 @@
     "                                        {{ __('Forgot Your Password?') }}\n",
     "                                    </a>\n",
     "                                @endif\n",
+    "                            </fieldset>\n",
+    "                        </form>\n",
+    "                    </div>\n",
+    "                </div>\n",
+    "            </div>\n",
+    "        </div>\n",
+    "    </div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Membuat View Untuk Register**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"container\">\n",
+    "        <div class=\"row\">\n",
+    "            <div class=\"col-md-4 col-md-offset-4\">\n",
+    "                <div class=\"login-panel panel panel-default\">\n",
+    "                    <div class=\"panel-heading\">\n",
+    "                        <h3 class=\"panel-title\">Register</h3>\n",
+    "                    </div>\n",
+    "                    <div class=\"panel-body\">\n",
+    "                        <form method=\"POST\" action=\"{{ route('register') }}\">\n",
+    "                            @csrf\n",
+    "                            <fieldset>\n",
+    "                                <div class=\"form-group\">\n",
+    "                                    <input id=\"name\" type=\"text\" placeholder=\"masukan nama\"\n",
+    "                                           class=\"form-control @error('name') is-invalid @enderror\" name=\"name\"\n",
+    "                                           value=\"{{ old('name') }}\" required autocomplete=\"name\" autofocus>\n",
+    "\n",
+    "                                    @error('name')\n",
+    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
+    "                                            <strong class=\"text-danger\">{{ $message }}</strong>\n",
+    "                                        </span>\n",
+    "                                    @enderror\n",
+    "                                </div>\n",
+    "                                <div class=\"form-group\">\n",
+    "                                    <input id=\"email\" type=\"email\" placeholder=\"masukan email\"\n",
+    "                                           class=\"form-control @error('email') is-invalid @enderror\" name=\"email\"\n",
+    "\n",
+    "                                           value=\"{{ old('email') }}\" required autocomplete=\"email\">\n",
+    "\n",
+    "                                    @error('email')\n",
+    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
+    "                                            <strong class=\"text-danger\">{{ $message }}</strong>\n",
+    "                                        </span>\n",
+    "                                    @enderror\n",
+    "                                </div>\n",
+    "                                <div class=\"form-group\">\n",
+    "                                    <input id=\"password\" type=\"password\" placeholder=\"masukan password\"\n",
+    "                                           class=\"form-control @error('password') is-invalid @enderror\" name=\"password\"\n",
+    "                                           required autocomplete=\"new-password\">\n",
+    "\n",
+    "                                    @error('password')\n",
+    "                                    <span class=\"invalid-feedback\" role=\"alert\">\n",
+    "                                            <strong>{{ $message }}</strong>\n",
+    "                                        </span>\n",
+    "                                    @enderror\n",
+    "                                </div>\n",
+    "                                <div class=\"form-group\">\n",
+    "                                    <input id=\"password-confirm\" type=\"password\" placeholder=\"konfirmasi pasowrd\"\n",
+    "                                           class=\"form-control\"\n",
+    "                                           name=\"password_confirmation\" required autocomplete=\"new-password\">\n",
+    "                                </div>\n",
+    "\n",
+    "                                <!-- Change this to a button or input when using this as a form -->\n",
+    "                                <button type=\"submit\" class=\"btn btn-lg btn-success btn-block\">\n",
+    "                                    Register\n",
+    "                                </button>\n",
+    "\n",
     "                            </fieldset>\n",
     "                        </form>\n",
     "                    </div>\n",
