--- a/crud user/view/index.ipynb
+++ b/crud user/view/index.ipynb
@@ -9,14 +9,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "    <div id=\"page-wrapper\">\n",
     "        <div class=\"container-fluid\">\n",
