--- a/crud user/view/create.ipynb
+++ b/crud user/view/create.ipynb
@@ -9,14 +9,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "    <div class=\"container\">\n",
     "        <div class=\"row\">\n",
